syntax = "proto3";

option go_package = "shukubota/go-api-template/grpc-example";
package chat;

service Chat {
  rpc Connect (ChatConnectRequest) returns (stream ChatConnectResponse);
  rpc SendData (ChatSendDataRequest) returns (ChatSendDataResponse);
//  rpc SayHelloBiDirectionalStream (stream HelloRequest) returns (stream HelloReply);
//  rpc SayHelloServerStream (HelloRequest) returns (stream HelloReply);
}

message ChatConnectRequest {
  string token = 1;
}

message ChatConnectResponse {
  string from = 1;
  DotData data = 2;
}

message ChatSendDataRequest {
  DotData data = 1;
  string from = 2;
}

message DotData {
  uint64 x = 1;
  uint64 y = 2;
}

message ChatSendDataResponse {
  string status = 1;
}